# bktrader

./: .gitignore  Cargo.toml  README.md  pyproject.toml
src/: backtest.rs  lib.rs  main.rs
src/broker/: analyzer.rs  etf.rs  mod.rs  readme.md
src/datatype/: bar.rs  mod.rs  position.rs  quote.rs  readme.md  trade.rs
src/python/: draw.py  engine.py  rank_model.py  requirements.txt  trader.py  view.py  web.py
src/python/quote/: append_ipc.py  fundtype.py  history.py  info.py  realtime.py
src/python/ranker/: bar1d_model.py
src/python/replayer/: duck.py  polar.py
src/python/templates/: bench.html  etf_index.html  index.html  lof_index.html
src/python/templates/history/: bench.html  etf_bench.html  etf_summary.html  lof_bench.html  single.html
src/python/templates/realtime/: bench.html  etf_bench.html  etf_summary.html  lof_bench.html  lof_summary.html  single.html
src/strategy/: base.rs  dmac.rs  grid.rs  mod.rs  qdii.rs  sav.rs
src/ta/: cross.rs  cumulative.rs  cycle.rs  ma.rs  mod.rs  momentum.rs  readme.md  rolling.rs  savgol.rs  volatility.rs
