[package]
name = "bktrader"
version = "0.37.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "bktrader"
# cdylib is for pyo3
# rlib is for main.rs
crate-type = ["cdylib", "rlib"]  # Added "rlib"

[dependencies]
rayon = "1.10"
duckdb = { version = "1.1", features = ["bundled"] }

[dependencies.pyo3]
version = "0.23"
# "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.8
features = ["abi3-py38"]
